<resources>
    <string name="app_name">CST2335_FinalProject</string>
    <string name="bbc_title">Title</string>
    <string name="bbc_description">Description</string>
    <string name="bbc_date">Date</string>
    <string name="bbc_link">URL</string>
    <string name="bbc_detail_btn_goToLink">Go To URL</string>
    <string name="bbc_delete">Delete</string>
    <string name="gnews">Guardian News</string>
    <string name="bbc_articleList_title">Current Articles</string>
    <string name="bbc_articleDetail_title">Details</string>
    <string name="nasa_imagery_header">NASA Earth Imagery Database</string>
    <string name="nasa_imagery_latHeader">Enter Latitude:</string>
    <string name="nasa_imagery_editLat">Enter Latitude Here</string>
    <string name="nasa_imagery_longHeader">Enter Longitude:</string>
    <string name="nasa_imagery_editLong">Enter Longitude Here</string>
    <string name="nasa_imagery_inputButton">Find Image</string>
    <string name="nasa_imagery_displayHeader">NASA Image Display</string>
    <string name="nasa_imagery_displayBack">Go Back To Main Page</string>
    <string name="nasa_imagery_displayFav">Add To Your Favourites!</string>
    <string name="nasa_imagery_goToFavBtn">See Your Favourite Images!</string>
    <string name="nasa_imagery_fragBtn">Hide</string>
    <string name="nasa_imagery_displayLat">Latitude: </string>
    <string name="nasa_imagery_displayLong">Longitude: </string>
    <string name="nasa_imagery_displayDirection">Direction: </string>
    <string name="nasa_imagery_Snackbar1">Image is already in your favourites!</string>
    <string name="nasa_imagery_Snackbar2">Image added to your favourites!</string>
    <string name="nasa_imagery_Toast1">Image not found.  Try again</string>
    <string name="nasa_imagery_Toast2">Invalid input.  Try again</string>
    <string name="nasa_imagery_help">Help!</string>
    <string name="nasa_imagery_DirectionHeader">Enter Direction of Image</string>
    <string name="nasa_imagery_editDirection">Enter Direction Here:</string>
    <string name="nasa_imagery_helpStringTitle">Info</string>
    <string name="nasa_imagery_helpString1">To find an image:\nEnter the latitude and longitude (in decimal form)
                                            of the location you would like to see,\nas well as the direction of the image.</string>
    <string name="nasa_imagery_helpString2">You can then add that image to a list of your favourites.</string>
    <string name="nasa_imagery_helpString3">To see your favourites right now, just click on the \'See your Favourites!\' button.</string>
    <string name="nasa_imagery_alertTitle">Do you want to delete this image?</string>
    <string name="nasa_imagery_alertMessage1">The selected row is: </string>
    <string name="nasa_imagery_alertMessage2">The databsae id is: </string>
    <string name="nasa_imagery_alertYes">Yes</string>
    <string name="nasa_imagery_alertNo">No</string>
    <string name="bbc_search">Search</string>
    <string name="bbc_articleupdated">Articles Retrieved from BBC</string>
    <string name="bbc_delete_alert_title">Delete Confirmation</string>
    <string name="bbc_cm_yes">Yes</string>
    <string name="bbc_cm_no">No</string>
    <string name="bbc_deleted">The article is deleted</string>
    <string name="bbc_undo">Undo</string>
    <string name="bbc_undo_done">The article is restored</string>
    <string name="bbc_found">articles are found</string>
    <string name="title">Title : </string>
    <string name="author">Author :Wenzhe Lu</string>
    <string name="version">Version : 2020.01.01</string>
    <string name="gnewsUrl">Guardian News URL : </string>
    <string name="gnewsSectionName">Guardian News Section Name : </string>
    <string name="saveNews">Save news </string>
    <string name="search">Search </string>
    <string name="myFavGuardianNews">My Favorite Guardian News </string>
    <string name="delete">delete </string>
    <string name="bbc_detail_btn_addToFavorite">Add To Favorites</string>
    <string name="bbc_add_succeed">Added to Favorites</string>
    <string name="bbc_add_fail">Already saved article</string>
    <string name="bbc_favorites_title">Favorites</string>
    <string name="bbc_help">How to use</string>
    <string name="bbc_backToMain">Exit</string>
    <string name="bbc_nav_header">BBC News Reader\nJaewoo Kim\nv1.0</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="bbc_help_detail_1">■ Current Articles\n&#160;&#160;&#160;&#160;&#160;Display articles, loaded from BBC.\n&#160;&#160;&#160;&#160;&#160;[Click] for details</string>
    <string name="bbc_help_detail_2">■ Details\n&#160;&#160;&#160;&#160;&#160;Display the detailed information.\n&#160;&#160;&#160;&#160;&#160;[Click] for adding to Favorites</string>
    <string name="bbc_help_detail_3">■ Favorites\n&#160;&#160;&#160;&#160;&#160;List your Favorite articles\n&#160;&#160;&#160;&#160;&#160;[Click] for details\n&#160;&#160;&#160;&#160;&#160;[Long-Click] for deletion</string>
    <string name="bbc_cm_ok">OK</string>
    <string name="bbc_already_in">You are already there</string>
    <string name="bbc_load_failed">Failed to load articles from the BBC Server</string>
    <string name="bbc_main_title">BBC News Reader</string>
    <string name="Nasa_Search_openDateBtn">Choose Date</string>
    <string name="Nasa_Search_searchDateBtn">Search Date</string>
    <string name ="Nasa_Search_DateDisplay">Date</string>
    <string name ="Nasa_Search_SearchDateToast">Searching for picture for that date</string>
    <string name ="Nasa_Search_FavListToast">Added to your favorites list</string>
</resources>
