<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/my_toolbar"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    <TextView
        android:id="@+id/nasa_imagery_mainHeader"
        android:layout_below="@+id/my_toolbar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nasa_imagery_header" />

    <TextView
        android:id="@+id/nasa_imagery_latHeader"
        android:layout_below="@+id/nasa_imagery_mainHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nasa_imagery_latHeader" />
    <EditText
        android:layout_width="match_parent"
        android:layout_below="@+id/nasa_imagery_latHeader"
        android:layout_height="wrap_content"
        android:id="@+id/nasa_imagery_editLat"
        android:hint="@string/nasa_imagery_editLat"
        />
    <TextView
        android:id="@+id/nasa_imagery_longHeader"
        android:layout_below="@+id/nasa_imagery_editLat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nasa_imagery_longHeader" />
    <EditText
        android:layout_width="match_parent"
        android:layout_below="@+id/nasa_imagery_longHeader"
        android:layout_height="wrap_content"
        android:id="@+id/nasa_imagery_editLong"
        android:hint="@string/nasa_imagery_editLong"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nasa_imagery_directionHeader"
        android:text="@string/nasa_imagery_DirectionHeader"
        android:layout_below="@+id/nasa_imagery_editLong"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nasa_imagery_editDirection"
        android:hint="@string/nasa_imagery_editDirection"
        android:layout_below="@id/nasa_imagery_directionHeader"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nasa_imagery_goToFavBtn"
        android:layout_above="@+id/nasa_imagery_inputButton"
        android:text="@string/nasa_imagery_goToFavBtn"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/nasa_imagery_inputButton"
        android:text="@string/nasa_imagery_inputButton"/>
</RelativeLayout>