<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuardianNews.GuardianNewsDetailActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/detail_gnewsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"/>
    <TextView
        android:id="@+id/showGnewsTitle"
        android:layout_toRightOf="@id/detail_gnewsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/detail_gnewsUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gnewsUrl"/>
        <TextView
            android:id="@+id/showGnewsUrl"
            android:layout_toRightOf="@id/detail_gnewsUrl"
            android:autoLink="web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/detail_gnewsSectionName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gnewsSectionName"/>
        <TextView
            android:id="@+id/showGnewsSectionName"
            android:layout_toRightOf="@id/detail_gnewsSectionName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <Button
        android:id="@+id/saveNewBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saveNews"/>
</LinearLayout>