<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuardianNews.GuardianNewsDetailFragment">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
       <TextView
           android:id="@+id/fagment_gnews_title_header"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/title"/>
        <TextView
            android:id="@+id/fagment_gnews_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/fagment_gnews_title_header"
            android:textColor="@color/colorBlue"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/fagment_gnews_link_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gnewsUrl"/>
        <TextView
            android:id="@+id/fagment_gnews_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:layout_toRightOf="@id/fagment_gnews_link_header"
            android:textColor="@color/colorBlue"/>
    </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/fagment_gnews_Section_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gnewsSectionName"/>
            <TextView
                android:id="@+id/fagment_gnews_Section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:layout_toRightOf="@id/fagment_gnews_Section_header"
                android:textColor="@color/colorBlue"/>
        </RelativeLayout>
        <Button
            android:id="@+id/saveBtnInFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saveNews"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</FrameLayout>