<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@color/colorWhite"
        android:background="@color/design_default_color_primary"
        android:id="@+id/bbc_toolbar" />
    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/bbc_drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                tools:context=".bbc.BBC_ArticleDetailActivity">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:textStyle="bold"
                        android:textSize="13dp"
                        android:text="@string/bbc_title" />
                    <TextView
                        android:id="@+id/bbc_detail_title"
                        android:fontFamily="serif"
                        android:textStyle="bold"
                        android:textSize="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp" >
                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:textStyle="bold"
                        android:textSize="13dp"
                        android:text="@string/bbc_description" />
                    <TextView
                        android:id="@+id/bbc_detail_description"
                        android:fontFamily="serif"
                        android:textStyle="bold"
                        android:textSize="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp" >
                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:textStyle="bold"
                        android:textSize="13dp"
                        android:text="@string/bbc_date" />
                    <TextView
                        android:id="@+id/bbc_detail_date"
                        android:fontFamily="serif"
                        android:textStyle="bold"
                        android:textSize="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp" >
                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:textStyle="bold"
                        android:textSize="13dp"
                        android:text="@string/bbc_link" />
                    <TextView
                        android:id="@+id/bbc_detail_link"
                        android:fontFamily="serif"
                        android:textStyle="bold"
                        android:textSize="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <Button
                    android:id="@+id/bbc_btn_goToLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bbc_detail_btn_goToLink"
                    android:layout_marginBottom="10dp" />
                <Button
                    android:id="@+id/bbc_btn_AddToFavorite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bbc_detail_btn_addToFavorite"
                    android:layout_marginBottom="10dp" />
            </LinearLayout>
        </RelativeLayout>
        <com.google.android.material.navigation.NavigationView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/bbc_nav_header_layout"
            app:menu="@menu/bbc_drawer_menu"
            android:id="@+id/bbc_nav_view"/>

    </androidx.drawerlayout.widget.DrawerLayout>
</LinearLayout>


